bio, city,and  state files created

--- a/index.html
+++ b/index.html
@@ -10,17 +10,26 @@
   <h1>
     Seattle
   </h1>
-  <img src="" />
-  <img src="" />
-  <p>
-    
+  <div>
+    <nav>
+      <a href="./bio.html" style="padding-left:10px;" >Eyob Tamir </a>
+      <a href="./city.html" style="padding-left:10px;">City</a>
+      <a href="./state.html" style="padding-left:10px;">State</a>
+    </nav>
+    </div>
+    <br>
+    <hr><hr>
+  <img src="./image/seattle-skyline-14904764209Wo.jpg" alt="seattle" style="height: 150px; width: auto;"/>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur rem et nobis praesentium a doloremque inventore nemo perferendis optio molestias assumenda voluptates eveniet neque, nam dolorem. Modi, enim praesentium officiis tenetur delectus ipsam corporis corrupti cum necessitatibus aspernatur sequi! Sed temporibus iure deserunt animi ab, laborum doloribus assumenda consequatur corporis.
   </p>
-
   <ul>
-    <li>list one</li>
-    <li>list two</li>
-    <li>list three</li>
+    <li>Pike place</li>
+    <li>Space needle</li>
+    <li>Balard locks</li>
   </ul>
+
+  
+
 
 </body>
 </html>
